--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Coming soon: Tony's bio and cv
+<!DOCTYPE HTML>
+<html>
+<head>
+    <title>Somebody’s Website</title>
+    <meta charset="utf-8">
+</head>
+<body>
+    <h1>A Website</h1>
+    <p>
+        A website can contain many things <br>
+        It can have text <br>
+        pictures, a video<br>
+        and more!<br>
+        but most importantly, it contains <br>
+        information!<br>
+    </p>
+</body>
+</html>
