--- a/404.html
+++ b/404.html
@@ -21,5 +21,5 @@ layout: page
   <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p>Tony seems not to be reachable. Be happy for him!</p>
 </div>
